--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #Database
-spring.datasource.url = jdbc:mariadb://localhost:3306/zik?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mariadb://localhost:3306/musicDB?createDatabaseIfNotExist=true
 spring.datasource.username= root
 spring.datasource.password = kwak
 spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 server.port=8081
 #Jpa-Hibernate
 spring.jpa.show-sql= false
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB53Dialect
 spring.main.allow-circular-references=true
