--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 server.port=8081
 #Jpa-Hibernate
 spring.jpa.show-sql= false
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB53Dialect
 spring.main.allow-circular-references=true
